# ai-physiotherapy-checker

./: LICENSE  README.md  config.py  main.py  pyproject.toml  requirements.txt  todo.txt  video_handler.py
schemas/: schemas.py
src/: config.py  feedback_engine.py  pose_estimator.py  pose_processor.py  video_handler.py  video_service.py
utils/: drawing.py
